--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
-<!DOCTYPE html>
-<html lang="es">
+<!DOCTYPE html> <!--Que tipo de doucumento-->
+<html lang="es"><!--tipo de idioma-->
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lenguaje de desarrollo</title>
+    <meta charset="UTF-8"><!--tipo de código ascii aceptas dichos códigos-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--con que pagina trabaja-->
+    <meta name="viewport" content="width=device-width, initi"> <!--informacion de tu pagina a los navegadores-->
+    <title>MI PRIMERA PÁGINA WEB</title> <!--titulo de tu pagina-->
 </head>
-<body>
-    <p>BIENVENIDOS A CERTUS 2021</p>
+<body style="background-color:rgb(158, 190, 250)">
+    <h1 align="center" style="color: rgb(175, 24, 24);">BIENVENIDOS</h1>
+    <h2 align="left">A MI PAGINA</h2>
+    <h3 align="rigth">QUE DARA LAS ULTIMAS NOVEDADES</h3>
+    <p style="color:darkcyan;" align="justify"> <font-size=50>
+        Aquí venderemos todo tipo de <b>computadoras</b>, laptop y
+         sus principales dispositivos para que puedas trabajar correctamente en tus <i>clases </i>
+         y en todo lo que te haga falta. </font-size=50</p>
+         <pre> TODO       BARATO</pre>
+         <h3> PAISES DE AMÉRICA</h3>
+         <UL>
+            <LI type="circle"> Bolivia</LI>
+            <LI type="disc"> Paraguay</LI>
+            <LI type="square">Ecuador</LI>
+         </UL>
+         <h3> PAISES DE AFRICA</h3>
+
+         <OL START="8">
+            <LI > Egipto</LI>
+            <LI > Nigeria</LI>
+            <LI > Sudafrica</LI>
+         </OL>
+
+         <OL START="8">
+            <LI type="a"> Egipto</LI>  <!--Solo acepta a, A, i, I-->
+            <LI type="a"></LI>> Nigeria</LI>
+            <LI > Sudafrica</LI>
+         </OL>
+
+<a href="https://www.youtube.com/"">
 </body>
 </html>
+    
+
+
+
+
