--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
 
          <OL START="8">
             <LI type="a"> Egipto</LI>  <!--Solo acepta a, A, i, I-->
-            <LI type="a"></LI>> Nigeria</LI>
-            <LI > Sudafrica</LI>
+            <LI type="a">Nigeria</LI>
+            <LI> Sudafrica</LI>
          </OL>
-
-<a href="https://www.youtube.com/"">
+<a href="https://www.youtube.com/""></a>>
 </body>
 </html>
     
